# sundials4py-generate

./: README.md  generate.py  pyproject.toml
litgen_extensions/: __init__.py  adapt_array_params.py  adapt_default_null_params.py  adapt_modifiable_immutable_to_return.py  adapt_sundials_type_returns.py  preprocess.py  utils.py
